fix: annotation highlights colour picker checkbox tick contrast (PR #2125 Fixes #2120)

--- a/src/renderer/assets/styles/components/annotations.scss
+++ b/src/renderer/assets/styles/components/annotations.scss
@@ -232,6 +232,10 @@
             cursor: pointer;
         }
     }
+
+    svg {
+      color: #4d4d4d;
+    }
   }
   
   .stylePicker {
